<?xml version="1.0" encoding="utf-8"?>
<com.papyruth.support.utility.navigator.NavigatableFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/signin_email_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/baseline_x2">
        <AutoCompleteTextView
            android:id="@+id/signin_email_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/baseline_x7"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="@dimen/baseline_x1"
            android:background="@drawable/background_edittext_green"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:hint="@string/hint_email"
            android:focusable="true"
            android:focusableInTouchMode="true"/>
        <EditText
            android:id="@+id/signin_password_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/baseline_x7"
            android:layout_below="@+id/signin_email_text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/background_edittext_green"
            android:singleLine="true"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:imeActionLabel="@string/signin_btn"
            android:hint="@string/hint_password"/>

        <TextView
            android:id="@+id/signin_password_recovery"
            android:layout_width="match_parent"
            android:layout_height="@dimen/baseline_x3"
            android:layout_below="@+id/signin_password_text"
            android:layout_marginTop="@dimen/baseline_x2.5"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="@dimen/baseline_x1"
            android:layout_marginEnd="@dimen/baseline_x1"
            android:layout_marginBottom="@dimen/baseline_x2.5"
            android:gravity="end"
            android:textColor="@drawable/background_textview_green"
            android:textSize="18sp"
            android:text="@string/password_recovery_label"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signin_password_recovery"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:orientation="vertical">
            <Button
                android:id="@+id/signin_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_height_button"
                android:layout_marginBottom="@dimen/baseline_x1"
                android:layout_gravity="bottom"
                android:enabled="false"
                android:text="@string/signin_btn"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/background_button_rect_green"/>
            <Button
                android:id="@+id/signin_signup_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_height_button"
                android:layout_gravity="bottom"
                android:text="@string/signup_btn"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorchip_green"
                android:background="@drawable/background_button_flat_green"/>
        </LinearLayout>
        <include layout="@layout/material_progressbar_large"/>
    </RelativeLayout>
</com.papyruth.support.utility.navigator.NavigatableFrameLayout>