...
    <string name="signup_invalid_realname">Name too long</string>
    <string name="signup_invalid_nickname">Nickname too long</string>
    <string name="signup_invalid_gender">There is no such gender</string>
    <string name="signup_invalid_entrance_year">Entrance year value is not in valid range</string>
    <string name="signup_invalid_university">University not selected</string>
    <string name="signup_agreement_message">By signing up, you will agree to %1$s and %2$s.</string>
    <string name="signup_terms_of_use">Terms and Conditions</string>
    <string name="signup_privacy_policy">Privacy Policy</string>
    <string name="signup_email_duplication">Duplicated Email</string>
    <string name="signup_nickname_duplication">Duplicated Nickname</string>
    <string name="toast_signin_failed">Failed to signin</string>
    <string name="toast_signup_failed">Failed to signup</string>
    <string name="toast_signup_min_entrance_year_not_loaded">Start of Entrance Year not loaded. Try again.</string>
    <string name="toast_fetch_users_me_failed">Failed to fetch user information. Try again.</string>
...
    <string name="dialog_positive_send">SEND</string>
    <string name="dialog_positive_resend">RESEND</string>
    <string name="dialog_positive_submit">SUBMIT</string>
    <string name="dialog_positive_settings">SETTING</string>
    <string name="dialog_positive_compose">COMPOSE EVALUATION</string>
    <string name="dialog_positive_edit">EDIT EVALUATION</string>
    <string name="dialog_positive_ok">OK</string>
    <string name="dialog_negative_cancel">CANCEL</string>
    <string name="dialog_negative_close">CLOSE</string>
    <string name="dialog_negative_change_email">CHANGE EMAIL</string>
    <string name="dialog_neutral_repository">REPOSITORY</string>
    <!-- Dialog Toast -->
    <string name="toast_alert_university_confirmation_email_sent">University confirmation email has been sent</string>
...
