...
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/empty"
            android:src="@drawable/ic_password_24dp"/>
        <EditText
            android:id="@+id/signup_password_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/signup_password_icon"
            android:layout_toEndOf="@+id/signup_password_icon"
            android:layout_marginLeft="@dimen/baseline_x4"
            android:layout_marginStart="@dimen/baseline_x4"
...
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:padding="@dimen/baseline_x2">
        <TextView
            android:id="@+id/signup_agreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="16sp"
...
