...
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/empty"
            android:src="@drawable/ic_email_24dp"/>
        <EditText
            android:id="@+id/signup_email_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/signup_email_icon"
            android:layout_toEndOf="@+id/signup_email_icon"
            android:layout_marginLeft="@dimen/baseline_x4"
            android:layout_marginStart="@dimen/baseline_x4"
...
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/empty"
            android:src="@drawable/ic_nickname_24dp"/>
        <EditText
            android:id="@+id/signup_nickname_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/signup_nickname_icon"
            android:layout_toEndOf="@+id/signup_nickname_icon"
            android:layout_marginLeft="@dimen/baseline_x4"
            android:layout_marginStart="@dimen/baseline_x4"
...
