...
            android:layout_alignParentStart="true"
            android:layout_gravity="center_vertical"
            android:layout_centerVertical="true"
            android:contentDescription="@string/empty"
            android:src="@drawable/ic_realname_24dp"/>
        <EditText
            android:id="@+id/signup_realname_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/signup_realname_icon"
            android:layout_toEndOf="@+id/signup_realname_icon"
            android:layout_marginLeft="@dimen/baseline_x4"
            android:layout_marginStart="@dimen/baseline_x4"
...
            android:layout_toEndOf="@+id/signup_gender_icon"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/signup_gender_radio_male"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/baseline_x2.5"
                android:layout_marginEnd="@dimen/baseline_x2.5"
...
